tests/errors/surf_arity_10.experr
'_init_' takes 1 positional argument(s) but 3 were given
